<resources>
    <string name="app_name">Smart Indicator</string>
    <string name="screen_title">Smart Indicators</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="local_wifi">Local Wifi</string>
    <string name="internet">Internet</string>
    <string name="weight_edit_text_hint">0.00</string>
    <string name="indicator_1">Indicator 1</string>
    <string name="scale_indicator">Scale Indicator</string>
    <string name="fab">FAB</string>
    <string name="tare">Tare</string>
    <string name="mode">Mode</string>
    <string name="m_plus_Inc">M+ / Inc</string>
    <string name="mr_shift">MR / Shift</string>
    <string name="click_button_to_add_new_scale">Click \'+\' button to add new Scale.</string>

    <!-- Strings related to Notication -->
    <string name="alert_notification_ticker">MQTT message has arrived</string>
    <string name="alert_notification_title">MQTT message</string>
    <string name="alert_notification_subtitle">On channel %1$s</string>

</resources>