<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_add"
        android:title="@string/settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_bluetooth"
                android:icon="@mipmap/ic_ble_round_menu"
                android:title="@string/bluetooth"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_local_wifi"
                android:icon="@mipmap/ic_local_wifi_round_menu"
                android:title="@string/local_wifi"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_internet"
                android:icon="@mipmap/ic_internet_round_menu"
                android:title="@string/internet"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>